test/src/e2e_vm_tests/test_programs/should_fail/main_should_not_have_args/src/pred.sw
predicate;

// this shouldn't compile
fn main(x:u64) -> bool {
    true
}